--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.OrdenPapaApplication"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Screen.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.SplashScreen.MySplash">
             <intent-filter>
